# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = rfactor
description = Scripts to compute and analyse the RUSLE R-factor.
author = Sacha Gobeyn
author_email = sacha@fluves.com
license = LGPL-3
long-description = file: README.md
long-description-content-type = text/markdown;
url = https://github.com/cn-ws/rfactor
# Add here related links, for example:
project_urls =
    Documentation = https://cn-ws.github.io/rfactor/
    Source = https://github.com/cn-ws/rfactor
    Changelog = https://cn-ws.github.io/rfactor/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Intended Audience :: Science/Research

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata>=1.1.0,<4.3; python_version<"3.8"
    pandas
    numpy
    matplotlib
    tqdm
	python-dotenv
    joblib

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install example_project[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
develop =
    pytest
    pytest-cov
    pytest-xdist
    sphinx
    sphinx_rtd_theme
    nbsphinx
    jupyter
    pre-commit
    black
    flake8
    pytest-datafiles
    tox
    sphinx-copybutton
    interrogate
    nbstripout
    setuptools_scm
    virtualenv


[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = example_project.module:function
# For example:
# console_scripts =
#     fibonacci = example_project.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this py.test issue.
addopts =
    #--cov rfactor --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
markers =
    slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1.1
package = rfactor

[build_sphinx]
source_dir = docs
#build_dir = build/sphinx

[options.package_data]
example_project= data/*setup_requires
